chore: 언어 통계에서 C/C++, Objective-C 제거

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,8 @@
 android/* linguist-documentation
 *.java linguist-documentation
+*.cpp linguist-documentation
+*.c linguist-documentation
+*.mm linguist-documentation
+*.h linguist-documentation
 ios/* linguist-documentation
 
