--- a/.gitattributes
+++ b/.gitattributes
@@ -5,5 +5,6 @@ android/* linguist-documentation
 *.mm linguist-documentation
 *.m linguist-documentation
 *.h linguist-documentation
+*.mk linguist-documentation
 ios/* linguist-documentation
 
