chore: 언어 통계에서 bzl 파일 제거

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,5 +6,6 @@ android/* linguist-documentation
 *.m linguist-documentation
 *.h linguist-documentation
 *.mk linguist-documentation
+*.bzl linguist-documentation
 ios/* linguist-documentation
 
