--- a/.gitattributes
+++ b/.gitattributes
@@ -7,5 +7,6 @@ android/* linguist-documentation
 *.h linguist-documentation
 *.mk linguist-documentation
 *.bzl linguist-documentation
+*.rb linguist-documentation
 ios/* linguist-documentation
 
