--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@types/react-redux": "^7.1.24",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-camera-kit": "^12.1.0",
-    "react-native-responsive-screen": "^1.4.2"
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.14.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
