--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-camera-kit": "^12.1.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-nfc-manager": "^3.13.5",
+    "react-native-paper": "^4.12.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.0",
+    "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0"
