feat: 퍼미션 스크린 추가

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,6 +22,10 @@ target 'AwesomeTSProject' do
   target 'AwesomeTSProjectTests' do
     inherit! :complete
     # Pods for testing
+
+    permissions_path = '../node_modules/react-native-permissions/ios'
+    
+    pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
   end
 
   # Enables Flipper.
