--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-nfc-manager": "^3.13.5",
     "react-native-paper": "^4.12.2",
+    "react-native-permissions": "^3.4.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.0",
