--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.0",
+    "react-native-send-intent": "^1.3.0",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
